Updated validation, fixed alignment, added success page

--- a/style.css
+++ b/style.css
@@ -6,28 +6,27 @@ body {
     justify-content: center;
     align-items: center;
     background: linear-gradient(135deg, #5d64e6, #789ff3);
-
-;
-
     font-family: Arial, Helvetica, sans-serif;
 }
 
-login-box {
+.login-box {
     background: white;
     padding: 30px 40px;
     border-radius: 10px;
     width: 320px;
     box-shadow: 0 8px 20px rgba(7, 7, 7, 0.2);
 }
+
 input {
     width: 100%;
     padding: 10px;
     margin-top: 8px;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 14px;
 }
+
 button {
     width: 100%;
     padding: 10px;
@@ -38,6 +37,7 @@ button {
     font-size: 15px;
     cursor: pointer;
     transition: 0.3s;
+    margin-top: 10px;
 }
 
 button:hover {
@@ -45,14 +45,12 @@ button:hover {
 }
 
 button:disabled {
-    background-color: rgb(0, 0, 0);
+    background-color: #999;
     cursor: not-allowed;
 }
-#error-message,
-#email-error {
-    color: #f2f7f8;
-    font-size: 13px;
-    margin-top: -10px;
-    margin-bottom: 10px;
-}
 
+.error {
+    color: red;
+    font-size: 13px;
+    margin-bottom: 12px;
+}
